correction of spacing in style

--- a/themes/ezcontent_theme/scss/paragraph_type_map.scss
+++ b/themes/ezcontent_theme/scss/paragraph_type_map.scss
@@ -29,31 +29,7 @@
       text-align: right;
 
       a {
-        background: $color-primary;
-        border: 1px solid $color-primary;
-        border-radius: 4px;
-        color: $color-white;
-        display: inline-block;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 1.42857143;
-        margin-bottom: 0;
-        padding: 10px;
-        text-align: center;
-        vertical-align: middle;
-        white-space: nowrap;
-
-        &:hover {
-          background: $color-white;
-          color: $color-primary;
-          text-decoration: none;
-        }
-
-        &:focus {
-          background: $color-white;
-          color: $color-primary;
-          text-decoration: none;
-        }
+        @include btnstyle;
 
       }
     }
